# stemia

./: .cruft.json  .github_changelog_generator  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
docs/: generate_readme.py
pyem-tools/: center_filament.py  functions.py
src/stemia/: __init__.py
src/stemia/aretomo/: __init__.py  aln2xf.py
src/stemia/aretomo/batch_warp/: threaded.py  topaz.py
src/stemia/cryosparc/: __init__.py  fix_filament_ids.py  generate_tilt_angles.py  merge_defects_gainref.py  time_wasted.py
src/stemia/cryosparc/csplot/: main.py  parse.py  plot.py
src/stemia/image/: __init__.py  classify_densities.py  create_mask.py  extract_z_snapshots.py  find_similar_protein.py  flip_z.py  fourier_crop.py  project_profiles.py  rescale.py
src/stemia/image/center_filament/: __init__.py  center_filament.py  funcs.py
src/stemia/imod/: find_NAD_params.py
src/stemia/relion/: __init__.py  align_filament_particles.py  edit_star.py
src/stemia/utils/: click.py  image_processing.py  io_.py
src/stemia/warp/: __init__.py  fix_mdoc.py  offset_angle.py  parse_xml.py  prepare_isonet.py  spoof_mdoc.py  summarize.py
stema/: center_filament.py  functions.py
stemia/: __init__.py  aretomo_align.py  center_filament.py  csplot.py  flip_z.py  functions.py  generate_tilt_angles.py  parse_warp_xml.py  rescale.py  stemia.py  utils.py
stemia/aretomo/: batch.sh
stemia/aretomo/batch_warp/: aretomo.py  aretomo_align.py  fix.py  fix_mdoc.py  funcs.py  main.py  parse.py  stack.py  threaded.py
stemia/aretomo_align/: __init__.py  aretomo_align.py  funcs.py
stemia/center_filament/: __init__.py  center_filament.py  funcs.py
stemia/cryosparc/: csplot.py  generate_tilt_angles.py  merge_defects_gainref.py
stemia/cryosparc/csplot/: main.py  parse.py
stemia/image/: __init__.py  classify_densities.py  create_mask.py  extract_z_snapshots.py  fourier_crop.py
stemia/imod/: __init__.py  find_NAD_params.py
stemia/relion/: align_filament_particles.py
stemia/utils/: click.py  io_.py
stemia/warp/: fix_mdoc.py  offset_angle.py  parse_xml.py  preprocess_serialem.sh  summarize.py
