[metadata]
name = stemia
version = attr: stemia._version.__version__
url = https://github.com/brisvag/stemia/
license = BSD 3-Clause
license_file = LICENSE
description = Scripts and Tools for Electron Microscopy Analysis.
long_description = file: README.md
long_description_content_type = text/markdown
author = Lorenzo Gaifas
author_email = brisvag@gmail.com
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
python_requires = >= 3.7
include_package_data = True
install_requires =
    click
    numpy
    mrcfile
    scikit_image
    scipy
    eulerangles
    starfile
    magicgui
    IPython
    plotly
    pandas
    pyqt5

[options.entry_points]
console_scripts =
    center_filament = stemia.center_filament:main
    rescale = stemia.rescale:main
    flip_z = stemia.flip_z:main
    correlate = stemia.correlate:main
    csplot = stemia.csplot:main
    generate_tilt_angles = stemia.generate_tilt_angles:main

[options.package_data]
* = *.txt, *.md

[flake8]
exclude = __init__.py
max-line-length = 110
