[metadata]
name = stemia
version = attr: stemia._version.__version__
url = https://github.com/brisvag/stemia/
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
description = Scripts and Tools for Electron Microscopy Analysis.
long_description = file: README.md
long_description_content_type = text/markdown
author = Lorenzo Gaifas
author_email = brisvag@gmail.com
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
python_requires = >= 3.8
include_package_data = True
setup_requires =
    setuptools_scm
install_requires =
    click
    numpy
    mrcfile
    scikit_image
    scipy
    eulerangles
    starfile
    magicgui
    IPython
    plotly
    pandas
    pyqt5
    GPUtil
    mdocfile

[options.entry_points]
console_scripts =
    stemia = stemia:cli

[options.package_data]
* = *.txt, *.md

[bdist_wheel]
universal = 1

[flake8]
exclude = __init__.py
max-line-length = 120
