[metadata]
name = stemia
version = attr: stemia._version.__version__
url = https://github.com/brisvag/stemia/
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
description = Scripts and Tools for Electron Microscopy Analysis.
long_description = file: README.md
long_description_content_type = text/markdown
author = Lorenzo Gaifas
author_email = brisvag@gmail.com
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
python_requires = >= 3.9
include_package_data = True
setup_requires =
    setuptools_scm
install_requires =
    click
    mrcfile
    numpy
    pandas
    rich
    rich
    scipy
    sh

[options.extras_require]
batch_warp =
    GPUtil
    mdocfile
    topaz-em
aretomo =
    %(batch_warp)s
csplot =
    plotly
    magicgui
    IPython
fix_filament_ids =
    starfile
generate_tilt_angles =
    starfile
cryosparc =
    %(csplot)s
    %(fix_filament_ids)s
    %(generate_tilt_angles)s
center_filament =
    scikit-image
classify_densities =
    matplotlib
    plotly
    edt
create_mask =
    edt
extract_z_snapshots =
    napari[pyqt5]
    cryohub
    cryotypes
flip_z =
    starfile
    eulerangles
image =
    %(center_filament)s
    %(classify_densities)s
    %(create_mask)s
    %(extract_z_snapshots)s
    %(flip_z)s
align_filament_particles =
    starfile
relion =
    %(align_filament_particles)s
fix_mdoc =
    mdocfile
merge_star =
    starfile
offset_angle =
    mdocfile
prepare_isonet =
    starfile
spoof_mdoc =
    mdocfile
summarize =
    tabulate
warp =
    %(fix_mdoc)s
    %(merge_star)s
    %(offset_angle)s
    %(prepare_isonet)s
    %(spoof_mdoc)s
    %(summarize)s
all =
    %(aretomo)s
    %(cryosparc)s
    %(image)s
    %(relion)s
    %(warp)s

[options.entry_points]
console_scripts =
    stemia = stemia:cli

[options.package_data]
* = *.txt, *.md

[bdist_wheel]
universal = 1

[flake8]
exclude = __init__.py
max-line-length = 120
